<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clarp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">1456582617919293</string>
    <string name="parse_app_id">tyhQ2ZPLI2zh7QTAncbsB0dPtjhUEqm4XhYu77ad</string>
    <string name="parse_client_key">BE6x59n7NymJUeBWxxIztCVkzLSnPxsSgQ2MecEE</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_new_game">New Game</string>
    <string name="new_game">New Game</string>
    <string name="FB_login">Log in with Facebook</string>
    <string name="game_title">Title:</string>
    <string name="game_genre">Genre:</string>
    <string name="game_description">Synopsis:</string>
    <string name="btn_invite">Invite Friends</string>
    <string name="empty_games_list">No current games</string>
    <string name="empty_messages_list">Say something!</string>
    <string name="suggestionButton">Suggest</string>
    <string name="accuseButton">Accuse</string>
    <string name="notesButton">Notes</string>
    <string name="submitButton">Submit</string>
    <string name="cancelButton">Cancel</string>
    <string name="title_activity_notes">NotesActivity</string>
    
    <string name="dialog_accept_invite">You have been invited to this game!</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    
    <string name="accuse_dialog_text">No one ruled out your suggestion! Would you like to formally make the accusation?</string>
    <string name="accuse">Accuse</string>
    <string name="pass">Pass</string>
    
    <string name="suspect1">Col. Red</string>
    <string name="suspect2">Suspect 2</string>
    <string name="suspect3">Suspect 3</string>
    <string name="suspect4">Suspect 4</string>
    <string name="suspect5">Suspect 5</string>
    <string name="suspect6">Suspect 6</string>
    <string name="weapon1">Weapon 1</string>
    <string name="weapon2">Weapon 2</string>
    <string name="weapon3">Weapon 3</string>
    <string name="weapon4">Weapon 4</string>
    <string name="weapon5">Weapon 5</string>
    <string name="weapon6">Weapon 6</string>
    <string name="scene1">Scene 1</string>
    <string name="scene2">Scene 2</string>
    <string name="scene3">Scene 3</string>
    <string name="scene4">Scene 4</string>
    <string name="scene5">Scene 5</string>
    <string name="scene6">Scene 6</string>
    <string name="title_activity_card_list">Card List</string>
    <string name="action_new">Add a Card</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_invite">Invite Players</string>
    <string name="cards_list">Cards List</string>
    <string name="card_label">Add a Card</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>

    <string name="title_activity_new_clarp_card">New Card</string>
    <string name="title_activity_new_clarp_card_fragment">NewClarpCardFragment</string>
    <string name="title_activity_pre_game">Game Setup</string>
    <string name="title_activity_invite">Invite Friends</string>
    
    <string name="add_cards">Add Evidence</string>
    <string name="pga_help">Add more pieces of evidence to start the game!</string>
    <string name="dont_show_message">Don\'t show me this message again.</string>
    
    <style name="ButtonText">
       <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
    </style>

</resources>
