<?xml version="1.0" encoding="UTF-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.clarp_returns.NotesActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textSuspects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Suspects" 
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textSuspect1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suspect1" 
                android:textSize="14sp"/>

            <CheckBox
                android:id="@+id/checkSuspect1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"/>

            <EditText
                android:id="@+id/editSuspect1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:maxLength="16">

                <requestFocus />
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textSuspect2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suspect2" 
                android:textSize="14sp"/>

            <CheckBox
                android:id="@+id/checkSuspect2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/editSuspect2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:maxLength="16">

                <requestFocus />
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textSuspect3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suspect3" 
                android:textSize="14sp"/>

            <CheckBox
                android:id="@+id/checkSuspect3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editSuspect3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:maxLength="16">

                <requestFocus />
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textSuspect4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suspect4" 
                android:textSize="14sp"/>

            <CheckBox
                android:id="@+id/checkSuspect4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editSuspect4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:maxLength="16">

                <requestFocus />
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textSuspect5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suspect5" 
                android:textSize="14sp"/>

            <CheckBox
                android:id="@+id/checkSuspect5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <EditText
                android:id="@+id/editSuspect5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:maxLength="16">

                <requestFocus />
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textSuspect6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suspect6" 
                android:textSize="14sp"/>

            <CheckBox
                android:id="@+id/checkSuspect6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <EditText
                android:id="@+id/editSuspect6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:maxLength="16">

                <requestFocus />
            </EditText>

        </LinearLayout>
        <TextView
            android:id="@+id/textWeapons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Weapons" 
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textWeapon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weapon1" 
                android:textSize="14sp"/>

            <CheckBox
                android:id="@+id/checkWeapon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"/>

            <EditText
                android:id="@+id/editWeapon1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:maxLength="16">

                <requestFocus />
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textWeapon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weapon2" 
                android:textSize="14sp"/>

            <CheckBox
                android:id="@+id/checkWeapon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/editWeapon2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:maxLength="16">

                <requestFocus />
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textWeapon3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weapon3" 
                android:textSize="14sp"/>

            <CheckBox
                android:id="@+id/checkWeapon3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editWeapon3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:maxLength="16">

                <requestFocus />
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textWeapon4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weapon4" 
                android:textSize="14sp"/>

            <CheckBox
                android:id="@+id/checkWeapon4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editWeapon4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:maxLength="16">

                <requestFocus />
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textWeapon5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weapon5" 
                android:textSize="14sp"/>

            <CheckBox
                android:id="@+id/checkWeapon5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <EditText
                android:id="@+id/editWeapon5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:maxLength="16">

                <requestFocus />
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textWeapon6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weapon6" 
                android:textSize="14sp"/>

            <CheckBox
                android:id="@+id/checkWeapon6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <EditText
                android:id="@+id/editWeapon6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:maxLength="16">

                <requestFocus />
            </EditText>

        </LinearLayout>
        <TextView
            android:id="@+id/textScenes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Scenes" 
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textScene1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scene1" 
                android:textSize="14sp"/>

            <CheckBox
                android:id="@+id/checkScene1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"/>

            <EditText
                android:id="@+id/editScene1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:maxLength="16">

                <requestFocus />
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textScene2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scene2" 
                android:textSize="14sp"/>

            <CheckBox
                android:id="@+id/checkScene2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/editScene2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:maxLength="16">

                <requestFocus />
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textScene3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scene3" 
                android:textSize="14sp"/>

            <CheckBox
                android:id="@+id/checkScene3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editScene3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:maxLength="16">

                <requestFocus />
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textScene4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scene4" 
                android:textSize="14sp"/>

            <CheckBox
                android:id="@+id/checkScene4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editScene4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:maxLength="16">

                <requestFocus />
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textScene5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scene5" 
                android:textSize="14sp"/>

            <CheckBox
                android:id="@+id/checkScene5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <EditText
                android:id="@+id/editScene5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:maxLength="16">

                <requestFocus />
            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textScene6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scene6" 
                android:textSize="14sp"/>

            <CheckBox
                android:id="@+id/checkScene6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <EditText
                android:id="@+id/editScene6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:maxLength="16">

                <requestFocus />
            </EditText>

        </LinearLayout>

    </LinearLayout>
    

</ScrollView >
